overlay: Disable unsupported options for now
Change-Id: I8be65ea9e467d9dc593d7e946e577538026166c9

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -31,8 +31,8 @@
          closed.  The default is 0. -->
     <integer name="config_lidKeyboardAccessibility">1</integer>
 
-    <integer name="config_keyboardBrightnessSettingDefault">255</integer>
-    <bool name="config_deviceHasVariableButtonBrightness">true</bool>
+    <!--<integer name="config_keyboardBrightnessSettingDefault">255</integer>
+    <bool name="config_deviceHasVariableButtonBrightness">true</bool>-->
 
     <!-- Hardware 'face' keys present on the device, stored as a bit field.
          This integer should equal the sum of the corresponding value for each
